// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<bolt-pagination> Component Basic usage 1`] = `
<bolt-pagination total="10"
                 current="5"
>
  <nav class="c-bolt-pagination c-bolt-pagination--align-center"
       role="navigation"
       aria-label="Pagination Navigation"
  >
    <a href="#!"
       class="c-bolt-pagination__item c-bolt-pagination__item--prev"
    >
      <span class="c-bolt-pagination__icon">
        <svg class="e-bolt-icon e-bolt-icon--small"
             xmlns="http://www.w3.org/2000/svg"
             viewbox="0 0 32 32"
             aria-hidden="true"
        >
          <path fill="#151619"
                fill-rule="evenodd"
                d="M19.6 26.6c.6.6 1.6.6 2.2 0s.6-1.6 0-2.2L13.5 16l8.3-8.3c.6-.6.6-1.6 0-2.2-.3-.3-.7-.5-1.1-.5s-.8.2-1.1.5l-9.5 9.4c-.6.6-.6 1.6 0 2.2z"
                clip-rule="evenodd"
          >
          </path>
        </svg>
      </span>
      <span class="c-bolt-pagination__text">
        Previous
      </span>
    </a>
    <a href="#!"
       class="c-bolt-pagination__item"
    >
      <span class="c-bolt-pagination__text">
        <span class="u-bolt-visuallyhidden">
          Navigate to first page
        </span>
        1
      </span>
    </a>
    <span class="c-bolt-pagination__item c-bolt-pagination__item--ellipsis"
          role="presentation"
    >
      &hellip;
    </span>
    <a href="#!"
       class="c-bolt-pagination__item"
    >
      <span class="c-bolt-pagination__text">
        <span class="u-bolt-visuallyhidden">
          Navigate to page
        </span>
        3
      </span>
    </a>
    <a href="#!"
       class="c-bolt-pagination__item"
    >
      <span class="c-bolt-pagination__text">
        <span class="u-bolt-visuallyhidden">
          Navigate to page
        </span>
        4
      </span>
    </a>
    <span class="c-bolt-pagination__item is-current"
          aria-current="true"
    >
      <span class="c-bolt-pagination__text">
        <span class="u-bolt-visuallyhidden">
          You are currently on page
        </span>
        5
      </span>
    </span>
    <a href="#!"
       class="c-bolt-pagination__item"
    >
      <span class="c-bolt-pagination__text">
        <span class="u-bolt-visuallyhidden">
          Navigate to page
        </span>
        6
      </span>
    </a>
    <a href="#!"
       class="c-bolt-pagination__item"
    >
      <span class="c-bolt-pagination__text">
        <span class="u-bolt-visuallyhidden">
          Navigate to page
        </span>
        7
      </span>
    </a>
    <span class="c-bolt-pagination__item c-bolt-pagination__item--ellipsis"
          role="presentation"
    >
      &hellip;
    </span>
    <a href="#!"
       class="c-bolt-pagination__item"
    >
      <span class="c-bolt-pagination__text">
        <span class="u-bolt-visuallyhidden">
          Navigate to last page
        </span>
        10
      </span>
    </a>
    <a href="#!"
       class="c-bolt-pagination__item c-bolt-pagination__item--next"
    >
      <span class="c-bolt-pagination__text">
        Next
      </span>
      <span class="c-bolt-pagination__icon">
        <svg class="e-bolt-icon e-bolt-icon--small"
             xmlns="http://www.w3.org/2000/svg"
             viewbox="0 0 32 32"
             aria-hidden="true"
        >
          <path fill="#151619"
                fill-rule="evenodd"
                d="M12.4 5.4c-.6-.6-1.6-.6-2.2 0s-.6 1.6 0 2.3l8.4 8.3-8.3 8.3c-.6.6-.6 1.6 0 2.2.3.3.7.5 1 .5.4 0 .8-.2 1.1-.5l9.4-9.4c.6-.6.6-1.6 0-2.2z"
                clip-rule="evenodd"
          >
          </path>
        </svg>
      </span>
    </a>
  </nav>
</bolt-pagination>
`;

exports[`<bolt-pagination> Component Horizontal alignment: center 1`] = `
<bolt-pagination total="5"
                 current="1"
>
  <nav class="c-bolt-pagination c-bolt-pagination--align-center"
       role="navigation"
       aria-label="Pagination Navigation"
  >
    <span class="c-bolt-pagination__item is-current"
          aria-current="true"
    >
      <span class="c-bolt-pagination__text">
        <span class="u-bolt-visuallyhidden">
          You are currently on page
        </span>
        1
      </span>
    </span>
    <a href="#!"
       class="c-bolt-pagination__item"
    >
      <span class="c-bolt-pagination__text">
        <span class="u-bolt-visuallyhidden">
          Navigate to page
        </span>
        2
      </span>
    </a>
    <a href="#!"
       class="c-bolt-pagination__item"
    >
      <span class="c-bolt-pagination__text">
        <span class="u-bolt-visuallyhidden">
          Navigate to page
        </span>
        3
      </span>
    </a>
    <a href="#!"
       class="c-bolt-pagination__item"
    >
      <span class="c-bolt-pagination__text">
        <span class="u-bolt-visuallyhidden">
          Navigate to page
        </span>
        4
      </span>
    </a>
    <a href="#!"
       class="c-bolt-pagination__item"
    >
      <span class="c-bolt-pagination__text">
        <span class="u-bolt-visuallyhidden">
          Navigate to page
        </span>
        5
      </span>
    </a>
    <a href="#!"
       class="c-bolt-pagination__item c-bolt-pagination__item--next"
    >
      <span class="c-bolt-pagination__text">
        Next
      </span>
      <span class="c-bolt-pagination__icon">
        <svg class="e-bolt-icon e-bolt-icon--small"
             xmlns="http://www.w3.org/2000/svg"
             viewbox="0 0 32 32"
             aria-hidden="true"
        >
          <path fill="#151619"
                fill-rule="evenodd"
                d="M12.4 5.4c-.6-.6-1.6-.6-2.2 0s-.6 1.6 0 2.3l8.4 8.3-8.3 8.3c-.6.6-.6 1.6 0 2.2.3.3.7.5 1 .5.4 0 .8-.2 1.1-.5l9.4-9.4c.6-.6.6-1.6 0-2.2z"
                clip-rule="evenodd"
          >
          </path>
        </svg>
      </span>
    </a>
  </nav>
</bolt-pagination>
`;

exports[`<bolt-pagination> Component Horizontal alignment: end 1`] = `
<bolt-pagination total="5"
                 current="1"
>
  <nav class="c-bolt-pagination c-bolt-pagination--align-end"
       role="navigation"
       aria-label="Pagination Navigation"
  >
    <span class="c-bolt-pagination__item is-current"
          aria-current="true"
    >
      <span class="c-bolt-pagination__text">
        <span class="u-bolt-visuallyhidden">
          You are currently on page
        </span>
        1
      </span>
    </span>
    <a href="#!"
       class="c-bolt-pagination__item"
    >
      <span class="c-bolt-pagination__text">
        <span class="u-bolt-visuallyhidden">
          Navigate to page
        </span>
        2
      </span>
    </a>
    <a href="#!"
       class="c-bolt-pagination__item"
    >
      <span class="c-bolt-pagination__text">
        <span class="u-bolt-visuallyhidden">
          Navigate to page
        </span>
        3
      </span>
    </a>
    <a href="#!"
       class="c-bolt-pagination__item"
    >
      <span class="c-bolt-pagination__text">
        <span class="u-bolt-visuallyhidden">
          Navigate to page
        </span>
        4
      </span>
    </a>
    <a href="#!"
       class="c-bolt-pagination__item"
    >
      <span class="c-bolt-pagination__text">
        <span class="u-bolt-visuallyhidden">
          Navigate to page
        </span>
        5
      </span>
    </a>
    <a href="#!"
       class="c-bolt-pagination__item c-bolt-pagination__item--next"
    >
      <span class="c-bolt-pagination__text">
        Next
      </span>
      <span class="c-bolt-pagination__icon">
        <svg class="e-bolt-icon e-bolt-icon--small"
             xmlns="http://www.w3.org/2000/svg"
             viewbox="0 0 32 32"
             aria-hidden="true"
        >
          <path fill="#151619"
                fill-rule="evenodd"
                d="M12.4 5.4c-.6-.6-1.6-.6-2.2 0s-.6 1.6 0 2.3l8.4 8.3-8.3 8.3c-.6.6-.6 1.6 0 2.2.3.3.7.5 1 .5.4 0 .8-.2 1.1-.5l9.4-9.4c.6-.6.6-1.6 0-2.2z"
                clip-rule="evenodd"
          >
          </path>
        </svg>
      </span>
    </a>
  </nav>
</bolt-pagination>
`;

exports[`<bolt-pagination> Component Horizontal alignment: start 1`] = `
<bolt-pagination total="5"
                 current="1"
>
  <nav class="c-bolt-pagination c-bolt-pagination--align-start"
       role="navigation"
       aria-label="Pagination Navigation"
  >
    <span class="c-bolt-pagination__item is-current"
          aria-current="true"
    >
      <span class="c-bolt-pagination__text">
        <span class="u-bolt-visuallyhidden">
          You are currently on page
        </span>
        1
      </span>
    </span>
    <a href="#!"
       class="c-bolt-pagination__item"
    >
      <span class="c-bolt-pagination__text">
        <span class="u-bolt-visuallyhidden">
          Navigate to page
        </span>
        2
      </span>
    </a>
    <a href="#!"
       class="c-bolt-pagination__item"
    >
      <span class="c-bolt-pagination__text">
        <span class="u-bolt-visuallyhidden">
          Navigate to page
        </span>
        3
      </span>
    </a>
    <a href="#!"
       class="c-bolt-pagination__item"
    >
      <span class="c-bolt-pagination__text">
        <span class="u-bolt-visuallyhidden">
          Navigate to page
        </span>
        4
      </span>
    </a>
    <a href="#!"
       class="c-bolt-pagination__item"
    >
      <span class="c-bolt-pagination__text">
        <span class="u-bolt-visuallyhidden">
          Navigate to page
        </span>
        5
      </span>
    </a>
    <a href="#!"
       class="c-bolt-pagination__item c-bolt-pagination__item--next"
    >
      <span class="c-bolt-pagination__text">
        Next
      </span>
      <span class="c-bolt-pagination__icon">
        <svg class="e-bolt-icon e-bolt-icon--small"
             xmlns="http://www.w3.org/2000/svg"
             viewbox="0 0 32 32"
             aria-hidden="true"
        >
          <path fill="#151619"
                fill-rule="evenodd"
                d="M12.4 5.4c-.6-.6-1.6-.6-2.2 0s-.6 1.6 0 2.3l8.4 8.3-8.3 8.3c-.6.6-.6 1.6 0 2.2.3.3.7.5 1 .5.4 0 .8-.2 1.1-.5l9.4-9.4c.6-.6.6-1.6 0-2.2z"
                clip-rule="evenodd"
          >
          </path>
        </svg>
      </span>
    </a>
  </nav>
</bolt-pagination>
`;
